[HT-846] Don’t use collapse and expand on topic page, its causing some strange horizontal scrolling issues.

--- a/health_adminimal/customisations.css
+++ b/health_adminimal/customisations.css
@@ -210,6 +210,9 @@ body .field-name-field-components .field-multiple-table fieldset legend {
     top: 5px;
     width: 100%;
 }
+body .field-name-field-components .field-multiple-table fieldset legend span, body .field-name-field-components .field-multiple-table fieldset legend span a {
+    width: 90%;
+}
 
 .field-name-field-components thead {
     display: none !important;
